k3s/glance/deployment-github-graph.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance-github-graph
  namespace: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance-github-graph
  template:
    metadata:
      labels:
        app: glance-github-graph
    spec:
      containers:
        - name: glance-github-graph
          image: haumea/glance-github-graph:latest
          ports:
            - containerPort: 8080
