k3s/glance/service.yml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
spec:
  selector:
    app: glance
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: glance-github-graph
  namespace: glance
spec:
  selector:
    app: glance-github-graph
  ports:
    - port: 8080
      targetPort: 8080
